--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,11 +1,19 @@
+body {
+  background-color: #333;
+  color: #9D929B; }
+  body a {
+    color: #DA6482; }
+
 header {
   background-color: #222;
-  height: 150px;
+  height: 100px;
   padding: 20px;
   color: white; }
   header img {
     animation: App-logo-spin infinite 20s linear;
-    height: 80px; }
+    height: 50px; }
+  header h2 {
+    font-size: 2.56rem; }
 
 @keyframes App-logo-spin {
   from {
@@ -13,16 +21,40 @@ header {
   to {
     transform: rotate(360deg); } }
 
+nav.row {
+  background-color: #DA6482;
+  margin-bottom: 0; }
+
 #currentCard {
   position: fixed;
   right: 50px;
   top: 100px;
   z-index: 100; }
 
-.container .set-list, .container .card-list {
+.set-list, .card-list, .deck-list {
   display: inline-block;
-  width: 50%;
-  vertical-align: top; }
+  width: 33%;
+  vertical-align: top;
+  height: 100%;
+  overflow-y: scroll; }
+  .set-list::-webkit-scrollbar, .card-list::-webkit-scrollbar, .deck-list::-webkit-scrollbar {
+    display: none; }
+  .set-list .collection, .card-list .collection, .deck-list .collection {
+    margin: 0;
+    border: 0;
+    border-radius: 0; }
+    .set-list .collection .collection-item, .card-list .collection .collection-item, .deck-list .collection .collection-item {
+      background: none;
+      border-bottom-color: #222; }
+      .set-list .collection .collection-item.active, .card-list .collection .collection-item.active, .deck-list .collection .collection-item.active {
+        background-color: #222; }
+
+.set-list {
+  width: 300px;
+  background: #2e2e2e; }
 
 .collection-item img {
   display: none; }
+
+footer {
+  background-color: #DA6482 !important; }
